--- a/Task_4/Task_4.ipynb
+++ b/Task_4/Task_4.ipynb
@@ -177,7 +177,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "11a74e20",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -191,9 +193,11 @@
     }
    ],
    "source": [
-    "'''That's unexpected! Almost a half of erosed polygons (shp file) did not match raster image (Sentinel2)! Let's  \n",
-    "visualize data to figure out the root cause. I am going to create an interactive map where both failed and not failed polygons\n",
-    "will be shown in red and blue colors respectievely'''"
+    "'''\n",
+    "It is surprising that almost half of the polygons in the eroded shapefile did not align with \n",
+    "the raster image from Sentinel2. To investigate the issue, I will create an interactive map\n",
+    "that displays both the successful and unsuccessful polygons in blue and red colors, respectively.\n",
+    "'''"
    ]
   },
   {
@@ -358,29 +362,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "6a9c870f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"No it is clear! Almost a half of polygons (red ones) are just beyound the Sentinel2 boundary. That is why \\nshp and jp2 did not match!\\nPerfect, for our purposes we will be use only the blue polygons as labeled data which represents erosed soil.\\nBut what about the data, which shell represent not erosed polygons. I was not provided with such examples. \\nIf there is no data, let's generate it from the jp2 file. As you can see from the map above, there is quite a big\\nquadrant located southwest, where there is no erosed at all. \\nLet's visualise it \\n\""
+       "\"\\nIt seems that almost half of the polygons (the red ones) are outside the boundary of the Sentinel2 image,\\nwhich is why the shapefile and jp2 file did not match up.\\nFortunately, we can still use the blue polygons as labeled data for eroded soil. However, \\nwe don't have any examples of polygons representing non-eroded soil. To address this, we can generate such \\nexamples from the jp2 file.\\nLooking at the map, we can see that there is a large quadrant in the southwest with no eroded soil present. \\nLet's visualize this area \\n\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''No it is clear! Almost a half of polygons (red ones) are just beyound the Sentinel2 boundary. That is why \n",
-    "shp and jp2 did not match!\n",
-    "Perfect, for our purposes we will be use only the blue polygons as labeled data which represents erosed soil.\n",
-    "But what about the data, which shell represent not erosed polygons. I was not provided with such examples. \n",
-    "If there is no data, let's generate it from the jp2 file. As you can see from the map above, there is quite a big\n",
-    "quadrant located southwest, where there is no erosed at all. \n",
-    "Let's visualise it \n",
+    "'''\n",
+    "It seems that almost half of the polygons (the red ones) are outside the boundary of the Sentinel2 image,\n",
+    "which is why the shapefile and jp2 file did not match up.\n",
+    "Fortunately, we can still use the blue polygons as labeled data for eroded soil. However, \n",
+    "we don't have any examples of polygons representing non-eroded soil. To address this, we can generate such \n",
+    "examples from the jp2 file.\n",
+    "Looking at the map, we can see that there is a large quadrant in the southwest with no eroded soil present. \n",
+    "Let's visualize this area \n",
     "'''"
    ]
   },
@@ -665,7 +672,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "cc54cb8f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -799,7 +808,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "5c48cf26",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
