--- a/Task_3/Task_3.ipynb
+++ b/Task_3/Task_3.ipynb
@@ -685,7 +685,7 @@
     "How residuals are distributed? \n",
     "It is not a normal distribution! The variance of the residuals is constant across\n",
     "he range of the target variable.\n",
-    "#f the target variable in a regression problem is evenly distributed over the range and does not follow\n",
+    "If the target variable in a regression problem is evenly distributed over the range and does not follow\n",
     "a normal distribution, then linear regression models might not be the best choice, as they assume \n",
     "a linear relationship between the target variable and the predictor variables, and they also assume that the \n",
     "residuals are normally distributed.\n",
